Status bar no longer covering the last line of the buffer

--- a/styles/atom-pane-status.less
+++ b/styles/atom-pane-status.less
@@ -5,7 +5,7 @@
 @import "ui-variables";
 
 .atom-pane-status {
-  position: absolute;
+  position: relative;
   bottom: 0;
   width: 100%;
   background: #fff;
